# KAMK-Summer-Jam-2017

./: CMakeLists.txt
assets/: config.txt
include/Jam/: AnimatedSprite.hpp  Entity.hpp  Instance.hpp  Layer.hpp  ParticleEmitter.hpp  ResourceManager.hpp  Scene.hpp
include/Jam/Entities/: BackgroundSprite.hpp  Bottle.hpp  Particle.hpp  Player.hpp  Player.hpp.orig  Prompter.hpp  Text.hpp
include/Jam/Scenes/: GameScene.hpp  GameScene.hpp.orig
src/: AnimatedSprite.cpp  CMakeLists.txt  ConfigManager.cpp  Entity.cpp  Instance.cpp  Layer.cpp  ParticleEmitter.cpp  ResourceManager.cpp  ResourceManager.h  Scene.cpp  main.cpp
src/Entities/: BackgroundSprite.cpp  Bottle.cpp  Particle.cpp  Player.cpp  Player.cpp.orig  Prompter.cpp  Text.cpp
src/Scenes/: GameScene.cpp  GameScene.cpp.orig
